# superinstance-harness

./: .gitignore  BUGFIX-NOTES.md  Cargo.toml  DESIGN.md  KIMI-HARNESS-GUIDE.md  README.md  SELF-IMPROVING-LOOP.md
src/: lib.rs
worker/: package-lock.json  package.json  wrangler.toml
worker/src/: index.ts
