[package]
name = "superinstance-harness"
version = "0.1.0"
edition = "2021"
description = "Self-optimizing harness using conservation law γ + η = C"
license = "MIT"

[lib]
name = "superinstance_harness"
path = "src/lib.rs"

[[bin]]
name = "superinstance-harness"
path = "src/bin/cli.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
